--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
@@ -1923,37 +1923,37 @@ Wysokie opóźnienie może spowolnić połączenie.</value>
     <value>Co to jest opóźnienie?</value>
   </data>
   <data name="Dialogs_NpsSurvey_CommentLabel">
-    <value>Please let us know why you gave that rating</value>
+    <value>Dlaczego taka ocena</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorSubtitle">
-    <value>We couldn't send your feedback. Please check your connection and try again.</value>
+    <value>Nie możemy wysłać opinii. Sprawdź połączenie i spróbuj ponownie.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>Coś poszło nie tak</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
-    <value>10 is very likely</value>
+    <value>10 to bardzo prawdopodobne</value>
   </data>
   <data name="Dialogs_NpsSurvey_LowRateDescription">
-    <value>0 is very unlikely</value>
+    <value>0 to bardzo nieprawdopodobne</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>Opcjonalnie</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>Udostępnij anonimowo</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
-    <value>Your feedback helps us improve Proton VPN.</value>
+    <value>Twoja opinia pomaga nam ulepszyć Proton VPN.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>Dziękujemy za opinię</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
-    <value>How likely are you to recommend Proton VPN to a friend?</value>
+    <value>Jak bardzo prawdopodobne jest, że polecisz Proton VPN znajomemu?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>Spróbuj ponownie</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Twoje połączenie zostało wyłączone, ponieważ serwer, którego używasz, nie wspiera ruchu peer-to-peer (P2P). Ruch P2P nie jest wspierany na darmowych serwerach. Użyj innego serwera dla ruchu P2P.</value>
@@ -2222,16 +2222,16 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Witaj w Proton VPN</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Description">
-    <value>You can now access your organization's dedicated servers from the main sidebar.</value>
+    <value>Masz teraz dostęp do dedykowanych serwerów organizacji z poziomu głównego panelu bocznego.</value>
   </data>
   <data name="Dialogs_WhatsNew_Gateways_Title">
     <value>Bramy zostały przeniesione</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Description">
-    <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
+    <value>Możesz łączyć się z drukarkami, głośnikami i innymi urządzeniami w sieci lokalnej (LAN), omijając tunel VPN.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>Połączenia LAN</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>Odświeżyliśmy interfejs i przenieśliśmy kilka rzeczy, aby ułatwić korzystanie z aplikacji.</value>
@@ -2240,10 +2240,10 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Nowy wygląd, ta sama ochrona</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Description">
-    <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
+    <value>Gdy przekierowanie portów jest włączone, na ekranie głównym zobaczysz aktywny numer portu.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>Numer aktywnego portu</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Dodawaj zaawansowane ustawienia profilu, jak funkcja NetShield czy przekierowanie portów, lub skonfiguruj praktyczną funkcję uruchamiania wybranej strony internetowej po połączeniu.</value>
@@ -2264,10 +2264,10 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Co nowego</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Description">
-    <value>You can now connect, disconnect, and change your default connection from the system tray.</value>
+    <value>Możesz łączyć się, rozłączać i zmieniać domyślne połączenie z poziomu zasobnika systemowego.</value>
   </data>
   <data name="Dialogs_WhatsNew_TrayApp_Title">
-    <value>New system tray app</value>
+    <value>Nowa aplikacja w zasobniku systemowym</value>
   </data>
   <data name="Exit_Confirmation_Title">
     <value>Wyjść z Proton VPN?</value>
@@ -2342,7 +2342,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Adres IP użytkownika może zostać ujawniony, jeśli połączenie VPN zostanie przerwane.</value>
   </data>
   <data name="Flyouts_KillSwitch_Info_Disconnected">
-    <value>Advanced kill switch disables your internet to protect your IP address while you're not connected to Proton VPN.</value>
+    <value>Zaawansowany Kill Switch wyłącza Internet, aby chronić Twój adres IP, kiedy nie jesteś połączony z siecią Proton VPN.</value>
   </data>
   <data name="Flyouts_KillSwitch_Standard_Success">
     <value>Jeśli połączenie VPN zostanie przerwane, użytkownik zostanie odłączony od Internetu do momentu przywrócenia połączenia VPN.</value>
@@ -2426,20 +2426,20 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Przyśpieszono przez VPN Accelerator</value>
   </data>
   <data name="Flyouts_Speed_Description1">
-    <value>Shows how much data goes through the VPN tunnel in real time.</value>
+    <value>Pokazuje ilość danych przechodzących przez tunel VPN w czasie rzeczywistym.</value>
   </data>
   <data name="Flyouts_Speed_Description2">
-    <value>This is based on your device's current activity. In most cases, it doesn't represent the VPN's maximum speed.</value>
+    <value>Prędkość bazuje na bieżącej aktywności Twojego urządzenia i nie przedstawia maksymalnej prędkości połączenia VPN.</value>
   </data>
   <data name="Flyouts_Speed_Download">
     <value>Pobieranie</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>VPN speed and traffic explained</value>
+    <value>Wyjaśnienie prędkości i ruchu VPN</value>
   </data>
   <data name="Flyouts_Speed_Title">
-    <value>Current traffic</value>
+    <value>Aktualny ruch sieciowy</value>
   </data>
   <data name="Flyouts_Speed_Upload">
     <value>Wysyłanie</value>
@@ -2509,14 +2509,14 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Uzyskaj to, co najlepsze z obu światów</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>Shows the total amount of data passed through the VPN tunnel since you connected.</value>
+    <value>Pokazuje ilość danych przesłanych przez tunel VPN od momentu połączenia.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Pobrano</value>
     <comment>Refers to the downloaded volume (e.g., Download [new line] 250 MB).</comment>
   </data>
   <data name="Flyouts_Volume_Title">
-    <value>Total traffic</value>
+    <value>Razem</value>
   </data>
   <data name="Flyouts_Volume_Upload">
     <value>Wysłano</value>
@@ -2555,7 +2555,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Format a size in Terabytes. {0} is a place holder for the number of Terabytes (eg. 30 TB)</comment>
   </data>
   <data name="Format_SpeedUnit">
-    <value>Current traffic ({0})</value>
+    <value>Aktualny ruch sieciowy ({0})</value>
     <comment>This string is used to format speed measurements in various units. The placeholder {0} will be replaced by the appropriate unit of measurement, such as B/s (Bytes per second), kB/s (Kilobytes per second), MB/s (Megabytes per second), and so on.</comment>
   </data>
   <data name="Format_Speed_BytesPerSecond">
@@ -2623,16 +2623,16 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_One">
-    <value>{0} hour ago</value>
+    <value>{0} godzinę temu</value>
   </data>
   <data name="Format_Time_Hours_Ago_Few">
-    <value>{0} hours ago</value>
+    <value>{0} godziny temu</value>
   </data>
   <data name="Format_Time_Hours_Ago_Many">
-    <value>{0} hours ago</value>
+    <value>{0} godzin temu</value>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>{0} godziny temu</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
@@ -2647,32 +2647,32 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_One">
-    <value>{0} minute ago</value>
+    <value>{0} minutę temu</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Few">
-    <value>{0} minutes ago</value>
+    <value>{0} minuty temu</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Many">
-    <value>{0} minutes ago</value>
+    <value>{0} minut temu</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>{0} minuty temu</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0} s</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_One">
-    <value>{0} second ago</value>
+    <value>{0} sekundę temu</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Few">
-    <value>{0} seconds ago</value>
+    <value>{0} sekundy temu</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Many">
-    <value>{0} seconds ago</value>
+    <value>{0} sekund temu</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>{0} sekundy temu</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Pobieraj pliki za pośrednictwem protokołów udostępniania plików, takich jak BitTorrent</value>
@@ -2740,13 +2740,13 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Landmarks are not displayed on screen but read by a screen reader to identify a group of components for accessibility purposes.</comment>
   </data>
   <data name="Home_ConnectionDetails_AdvancedKillSwitchActivated">
-    <value>Advanced kill switch activated</value>
+    <value>Zaawansowany Kill Switch jest włączony</value>
   </data>
   <data name="Home_ConnectionDetails_City">
     <value>Miasto</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectToRestoreConnection">
-    <value>Connect to VPN to restore your internet connection.</value>
+    <value>Połącz się z VPN, aby przywrócić połączenie internetowe.</value>
   </data>
   <data name="Home_ConnectionDetails_ConnectedFor">
     <value>Połączono</value>
@@ -2819,7 +2819,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Zaszyfruj aktywność online, łącząc się z siecią VPN.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
-    <value>Total traffic</value>
+    <value>Razem</value>
   </data>
   <data name="Home_ConnectionDetails_Volume_Download">
     <value>Pobrano</value>
@@ -3032,7 +3032,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Ustaw ten numer portu w aplikacji BitTorrent dla lepszej prędkości.</value>
   </data>
   <data name="Notifications_SessionLimit_Description">
-    <value>You've reached your maximum device limit. To reconnect to VPN, please disconnect from another device.</value>
+    <value>Osiągnięto maksymalny limit urządzeń. Aby połączyć się z siecią VPN, odłącz inne urządzenie.</value>
   </data>
   <data name="Notifications_SubscriptionExpired_Description_Connected">
     <value>Twój plan został obniżony do planu Proton Free. Nastąpi ponowne połączenie z najszybszym darmowym serwerem.</value>
@@ -3044,7 +3044,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Wykryto niezabezpieczone połączenie Wi-Fi</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN - Ankieta</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3399,10 +3399,10 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Zapobiega wyciekom IPv6, blokując połączenia z adresami IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>Zezwalaj na połączenia LAN</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
-    <value>Allows connections to printers, speakers, and other devices in your local network.</value>
+    <value>Umożliwia połączenie z drukarkami, głośnikami i innymi urządzeniami w sieci lokalnej urządzenia.</value>
   </data>
   <data name="Settings_Connection_Advanced_NatType">
     <value>Typ NAT</value>
@@ -3540,7 +3540,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Aby użyć przekierowania portów, połącz się z serwerem, który wspiera ruch P2P.</value>
   </data>
   <data name="Settings_Connection_PortForwarding_LastChanged">
-    <value>Last changed: {0}</value>
+    <value>Zmieniono: {0}</value>
     <comment>Indicates when the active port was changed for the last time. {0} is a placeholder for the time. (eg. "Last changed: 5 minutes ago" or "Last changed: May 20, at 14:32")</comment>
   </data>
   <data name="Settings_Connection_PortForwarding_Loading">
@@ -3595,13 +3595,13 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Dostosuj połączenie, decydując, które aplikacje i adresy IP będą chronione przez VPN.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>Tryb dołączania</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Tylko wybrane aplikacje i adresy IP zostaną uwzględnione w połączeniu VPN. Pozostały ruch sieciowy nie będzie chroniony</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>Dołącz</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3618,13 +3618,13 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Dodaj adres IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>Tryb wykluczania</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Wybrane aplikacje i adresy IP zostaną wykluczone z połączenia VPN</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>Wyklucz</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
@@ -3956,7 +3956,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Button displayed in the tray icon to open the Proton VPN application. {0} is a placeholder for the name of the application (eg. "Open Proton VPN")</comment>
   </data>
   <data name="Tray_Actions_OpenApplicationToSignIn">
-    <value>Open app to sign in</value>
+    <value>Otwórz aplikację, aby się zalogować</value>
   </data>
   <data name="Unit_BytesPerSecond">
     <value>B/s</value>
@@ -4087,16 +4087,16 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Przekieruj ruch przez ultrabezpieczne serwery w Szwajcarii, Szwecji i Islandii</value>
   </data>
   <data name="Upsell_Carousel_Speed">
-    <value>Browse at even higher speeds</value>
+    <value>Przeglądaj Internet z najwyższą prędkością</value>
   </data>
   <data name="Upsell_Carousel_Speed_Acceleration">
-    <value>Browse up to 400% faster with VPN Accelerator</value>
+    <value>Przeglądaj Internet do 400% szybciej dzięki funkcji VPN Accelerator</value>
   </data>
   <data name="Upsell_Carousel_Speed_Access">
     <value>Szybszy dostęp do mniej obciążonych serwerów</value>
   </data>
   <data name="Upsell_Carousel_Speed_Traffic">
-    <value>Get connection speeds of up to 10 Gbps</value>
+    <value>Uzyskaj prędkość połączenia do 10 Gb/s</value>
   </data>
   <data name="Upsell_Carousel_SplitTunneling">
     <value>Uzyskaj to, co najlepsze z obu światów</value>
@@ -4154,7 +4154,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <comment>Title for the worldwide coverage upsell feature page. {0} is a placeholder for the number of servers (eg. 100 secure servers) and {1} for the number of countries available (eg. 60 countries).</comment>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Censorship">
-    <value>Bypass censorship with advanced security features</value>
+    <value>Omiń cenzurę za pomocą zaawansowanych funkcji bezpieczeństwa</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Countries_One">
     <value>{0} kraju</value>
@@ -4169,10 +4169,10 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>{0} kraju</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Features">
-    <value>Secure streaming, torrenting, and more</value>
+    <value>Bezpieczny streaming, torrenting i więcej</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Selection">
-    <value>Select any country from our worldwide network</value>
+    <value>Wybierz kraj z naszej globalnej sieci</value>
   </data>
   <data name="Upsell_Carousel_WorldwideCoverage_Servers_One">
     <value>{0} bezpiecznego serwera</value>
