--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fi-FI/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fi-FI/Resources.resw
@@ -1785,7 +1785,7 @@ Korkea viive voi hidastaa yhteyttäsi.</value>
     <value>We couldn't send your feedback. Please check your connection and try again.</value>
   </data>
   <data name="Dialogs_NpsSurvey_ErrorTitle">
-    <value>Something went wrong</value>
+    <value>Jotain meni pieleen</value>
   </data>
   <data name="Dialogs_NpsSurvey_HighRateDescription">
     <value>10 is very likely</value>
@@ -1794,22 +1794,22 @@ Korkea viive voi hidastaa yhteyttäsi.</value>
     <value>0 is very unlikely</value>
   </data>
   <data name="Dialogs_NpsSurvey_Optional">
-    <value>Optional</value>
+    <value>Valinnainen</value>
   </data>
   <data name="Dialogs_NpsSurvey_ShareAnonymously">
-    <value>Share anonymously</value>
+    <value>Jaa anonyymisti</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessSubtitle">
     <value>Your feedback helps us improve Proton VPN.</value>
   </data>
   <data name="Dialogs_NpsSurvey_SuccessTitle">
-    <value>Thanks for your feedback</value>
+    <value>Kiitos palautteestasi</value>
   </data>
   <data name="Dialogs_NpsSurvey_Title">
     <value>How likely are you to recommend Proton VPN to a friend?</value>
   </data>
   <data name="Dialogs_NpsSurvey_TryAgain">
-    <value>Try again</value>
+    <value>Yritä uudelleen</value>
   </data>
   <data name="Dialogs_P2PDetection_Description">
     <value>Yhteytesi on poistettu käytöstä, koska käytät palvelinta, joka ei tue tiedostojen jakoon käytettävää P2P-tiedonsiirtoa. P2P-tiedonsiirtoa ei tueta ilmaisilla palvelimilla. Käytä tähän tarkoitukseen eri palvelinta.</value>
@@ -2081,7 +2081,7 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>You can now connect to printers, speakers, and other devices on your local network (LAN), bypassing the VPN tunnel.</value>
   </data>
   <data name="Dialogs_WhatsNew_LanConnections_Title">
-    <value>LAN connections</value>
+    <value>LAN-yhteydet</value>
   </data>
   <data name="Dialogs_WhatsNew_NewLook_Description">
     <value>We refreshed our designs and moved some things around to make the app easier to use.</value>
@@ -2093,7 +2093,7 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>When port forwarding is enabled, you'll now see your active port number on the home screen.</value>
   </data>
   <data name="Dialogs_WhatsNew_PortNumber_Title">
-    <value>Active port number</value>
+    <value>Aktiivisen portin numero</value>
   </data>
   <data name="Dialogs_WhatsNew_Profiles_Description">
     <value>Add advanced profile settings like NetShield and port forwarding, or set up Connect and Go to launch a website of your choice when you connect.</value>
@@ -2437,10 +2437,10 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <comment>Format a time as a number of hours, minutes and seconds in a short format. 'hh' is a placeholder for the number of hours, 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. hh\:mm\:ss gives 01:05:36).</comment>
   </data>
   <data name="Format_Time_Hours_Ago_One">
-    <value>{0} hour ago</value>
+    <value>{0} tunti sitten</value>
   </data>
   <data name="Format_Time_Hours_Ago_Other">
-    <value>{0} hours ago</value>
+    <value>{0} tuntia sitten</value>
   </data>
   <data name="Format_Time_Minutes">
     <value>{0} min</value>
@@ -2455,20 +2455,20 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <comment>Format a time as a number of minutes and seconds in a short format. 'mm' is a placeholder for the number of minutes and 'ss' for the number of seconds. The separator (if any) needs to be escaped using '' character (eg. mm\:ss gives 05:36).</comment>
   </data>
   <data name="Format_Time_Minutes_Ago_One">
-    <value>{0} minute ago</value>
+    <value>{0} minuutti sitten</value>
   </data>
   <data name="Format_Time_Minutes_Ago_Other">
-    <value>{0} minutes ago</value>
+    <value>{0} minuuttia sitten</value>
   </data>
   <data name="Format_Time_Seconds">
     <value>{0} s</value>
     <comment>Format a time as a number of seconds. {0} is a placeholder for the number of second (eg. 1 sec or 20 sec). Use abbreviations for seconds, no pluralization.</comment>
   </data>
   <data name="Format_Time_Seconds_Ago_One">
-    <value>{0} second ago</value>
+    <value>{0} sekunti sitten</value>
   </data>
   <data name="Format_Time_Seconds_Ago_Other">
-    <value>{0} seconds ago</value>
+    <value>{0} sekuntia sitten</value>
   </data>
   <data name="FreeConnections_P2PUpsell">
     <value>Lataa tiedostoja mm. BitTorrentin kaltaisilla tiestonjakoprotokollilla</value>
@@ -2828,7 +2828,7 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>Havaittiin suojaamaton Wi-Fi-yhteys</value>
   </data>
   <data name="NpsSurvey_Title">
-    <value>Proton VPN - Survey</value>
+    <value>Proton VPN - Kysely</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
   <data name="Overlay_OutdatedClient_Action">
@@ -3183,7 +3183,7 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>Torjuu IPv6-vuodot estämällä yhteydet IPv6-osoitteisiin.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
-    <value>Allow LAN connections</value>
+    <value>Salli LAN-yhteydet</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections_Description">
     <value>Allows connections to printers, speakers, and other devices in your local network.</value>
@@ -3379,13 +3379,13 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>Mukauta yhteyttäsi määrittämällä, mitkä sovellukset ja IP-osoitteet suojataan VPN:llä.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse">
-    <value>Include mode</value>
+    <value>Sisällytä-tila</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Description">
     <value>Vain valitut sovellukset ja IP-osoitteet muodostavat yhteyden VPN:n välityksellä. Kaikki muu tietoliikenne on suojaamatonta.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Include</value>
+    <value>Sisällytä</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3402,13 +3402,13 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
     <value>Lisää IPv4-osoite</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
-    <value>Exclude mode</value>
+    <value>Poissulje-tila</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Description">
     <value>Valitut sovellukset ja IP-osoitteet suljetaan VPN-yhteyden ulkopuolelle.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclude</value>
+    <value>Poissulje</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
